--- a/src/components/Home/Home.modules.css
+++ b/src/components/Home/Home.modules.css
@@ -91,5 +91,32 @@
 	width: 70px;
 	height: 10px;
 	z-index: -1;
-	opacity: 0.7;
+	opacity: 0.5;
+}
+
+.shape-1 {
+	position: absolute;
+	filter: invert(1);
+	right: 25%;
+	top: 15%;
+	height: 200px;
+	z-index: -1;
+}
+
+.shape-2 {
+	position: absolute;
+	filter: invert(1);
+	left: 1%;
+	bottom: 10%;
+	height: 150px;
+	z-index: -2;
+}
+
+.shape-3 {
+	position: absolute;
+	filter: invert(1);
+	right: 20%;
+	top: 45%;
+	height: 100px;
+	z-index: -1;
 }
