--- a/src/components/Home/Home.modules.css
+++ b/src/components/Home/Home.modules.css
@@ -1,5 +1,5 @@
 .home {
-	background-color: var(--first-gradient);
+	background-image: var(--third-gradient);
 	min-height: 100vh;
 	display: grid;
 	align-items: center;
@@ -90,17 +90,15 @@
 	transform: translate(-59%);
 	width: 70px;
 	height: 10px;
-	z-index: -1;
-	opacity: 0.5;
+	opacity: 0.7;
 }
 
 .shape-1 {
 	position: absolute;
 	filter: invert(1);
 	right: 25%;
-	top: 15%;
+	top: 12%;
 	height: 200px;
-	z-index: -1;
 }
 
 .shape-2 {
@@ -109,7 +107,6 @@
 	left: 1%;
 	bottom: 10%;
 	height: 150px;
-	z-index: -2;
 }
 
 .shape-3 {
@@ -118,5 +115,4 @@
 	right: 20%;
 	top: 45%;
 	height: 100px;
-	z-index: -1;
 }
