--- a/src/components/Services/Services.modules.css
+++ b/src/components/Services/Services.modules.css
@@ -29,7 +29,7 @@
 	min-height: 175px;
 }
 
-.swiper-horizontal > .swiper-pagination-bullets {
+/* .swiper-horizontal > .swiper-pagination-bullets {
 	width: 100%;
 	position: relative;
 	display: inline-block;
@@ -70,4 +70,4 @@
 	height: 15px;
 	width: 15px;
 	background-color: var(--primary-color);
-}
+} */
