--- a/src/App.css
+++ b/src/App.css
@@ -190,11 +190,17 @@ img {
 	background-color: var(--container-color);
 	border-radius: 10px;
 	overflow: hidden;
+	position: relative;
 }
 
 .card-one {
 	padding: 30px 35px;
 	border-radius: 18px;
+}
+
+.card-two {
+	padding: 30px;
+	border-radius: 20px;
 }
 
 .link {
