--- a/src/components/Portfolio/Portfolio.modules.css
+++ b/src/components/Portfolio/Portfolio.modules.css
@@ -4,8 +4,10 @@
 
 .portfolio__list {
 	display: flex;
+    flex-wrap: wrap;
 	justify-content: center;
 	column-gap: 40px;
+    row-gap: 20px;
 	margin-bottom: 60px;
 }
 
