--- a/src/components/Contact/Contact.modules.css
+++ b/src/components/Contact/Contact.modules.css
@@ -3,7 +3,7 @@
 }
 
 .contact__container {
-    display: grid;
+	display: grid;
 	grid-template-columns: 5fr 7fr;
 }
 
@@ -17,6 +17,12 @@
 .contact__form-input {
 	border: 2px solid var(--border-color);
 	background-color: var(--container-color);
+}
+
+.contact__form-input:hover,
+.contact__form-input:focus,
+.contact__card-icon:hover {
+	border-color: var(--primary-color);
 }
 
 .contact__card-icon {
@@ -43,69 +49,69 @@
 }
 
 .contact__card-title {
-    font-size: var(--h2-font-size);
-    font-family: var(--secondary-font);
-    padding-block: 6px;
+	font-size: var(--h2-font-size);
+	font-family: var(--secondary-font);
+	padding-block: 6px;
 }
 
 .contact__card-data {
-    font-size: var(--smaller-font-size);
-    color: var(--text-color);
-    margin-top: -8px;
-    opacity: 0.7;
+	font-size: var(--smaller-font-size);
+	color: var(--text-color);
+	margin-top: -8px;
+	opacity: 0.7;
 }
 
 .contact__form-group {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	column-gap: 20px;
 }
 
 .contact__form-div {
-    display: grid;
-    row-gap: 10px;
-    margin-bottom: 30px;
+	display: grid;
+	row-gap: 10px;
+	margin-bottom: 30px;
 }
 
 .contact__form-tag {
-    font-size: var(--smaller-font-size);
-    color: var(--text-color);
-    margin-left: 30px;
-    font-weight: 700;
+	font-size: var(--smaller-font-size);
+	color: var(--text-color);
+	margin-left: 30px;
+	font-weight: 700;
 }
 
 .contact__form-tag b {
-    color: var(--primary-color);
+	color: var(--primary-color);
 }
 
 .contact__form-input {
-    height: 60px;
-    border-radius: 30px;
-    padding-inline: 30px;
-    font-size: var(--smaller-font-size);
-    color: var(--text-color);
+	height: 60px;
+	border-radius: 30px;
+	padding-inline: 30px;
+	font-size: var(--smaller-font-size);
+	color: var(--text-color);
 }
 
 ::placeholder {
-    color: var(--text-color);
-    opacity: 0.5;
+	color: var(--text-color);
+	opacity: 0.5;
 }
 
 .contact__form-area .contact__form-input {
-    height: 140px;
-    padding-block: 20px;
-    resize: none;
+	height: 140px;
+	padding-block: 20px;
+	resize: none;
 }
 
 .contact__submit {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    column-gap: 20px;
+	display: flex;
+	justify-content: end;
+	align-items: center;
+	column-gap: 20px;
 }
 
 .contact__submit p {
-    font-size: var(--smaller-font-size);
-    color: var(--text-color);
-    color: var(--primary-color);
+	font-size: var(--smaller-font-size);
+	color: var(--text-color);
+	color: var(--primary-color);
 }
