--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Jost:wght@400;500;700&display=swap");
+@font-face {
+	font-family: "Jost";
+	src: url("../public/fonts/jost-regular.woff2") format("woff2");
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: "Jost";
+	src: url("../public/fonts/jost-medium.woff2") format("woff2");
+	font-weight: 500;
+}
+
+@font-face {
+	font-family: "Jost";
+	src: url("../public/fonts/jost-semibold.woff2") format("woff2");
+	font-weight: 700;
+}
+
+@font-face {
+	font-family: "Caveat";
+	src: url("../public/fonts/caveat-bold.woff2") format("woff2");
+	font-weight: 700;
+}
 
 :root {
 	/* colors */
