--- a/src/pages/SingleBlogPage/SingleBlogPage.modules.css
+++ b/src/pages/SingleBlogPage/SingleBlogPage.modules.css
@@ -87,9 +87,10 @@
 	}
 	.about__blog {
 		flex-direction: column;
+		margin-inline: 0.5rem;
 	}
 	.about__blog > * {
-		margin: 0.5rem 0;
+		margin-block: 0.3rem;
 	}
 	.blog__desc {
 		font-size: var(--larger-font-size);
